src/tests/parse_errors/008.ura
// parse_errors/008 — `pub fn` outside a struct definition
use "@/header"

pub fn helper() void:
    return

main():
    helper()